--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="zh-CN">
 
 <head>
@@ -18,7 +18,7 @@
                 <canvas id="garden"></canvas>
                 <div id="words">
                     <div id="messages">
-                        鄢文倩, 这是我们认识的第
+                        鄢文倩, 这是我们在一起第
                         <div id="elapseClock"></div>
                     </div>
                     <div id="loveu">
